ajout de balise div

--- a/hello.html
+++ b/hello.html
@@ -16,6 +16,11 @@
 		<div id="top-banner">
 			Bienvenue dans cette formation GIT !
 		</div>
+
+		<div>
+			<p> Coucou c'est moi zbi c'est mon site pour m'entrainer sur git carrément. </p>
+		</div>
+
 		
 	
 </body></html>
