--- a/hello.html
+++ b/hello.html
@@ -17,10 +17,15 @@
 			Bienvenue dans cette formation GIT !
 		</div>
 
+		<!-- description--> 
 		<div>
+			<h1> Ma Description  </h1>
 			<p> Coucou c'est moi zbi c'est mon site pour m'entrainer sur git carrément. </p>
 		</div>
 
-		
-	
+		<!-- description--> 
+		<div>
+			<h1> Mes récompenses  </h1>
+			<p> En construction...  </p>
+		</div>
 </body></html>
