ajout d'un gist

--- a/hello.html
+++ b/hello.html
@@ -23,9 +23,14 @@
 			<p> Coucou c'est moi zbi c'est mon site pour m'entrainer sur git carrément. </p>
 		</div>
 
-		<!-- description--> 
+		<!-- récompenses --> 
 		<div>
 			<h1> Mes récompenses  </h1>
 			<p> En construction...  </p>
 		</div>
-</body></html>
+
+		<!-- mon gist --> 
+		<div>
+			<h1> Mon gist  </h1>
+			<p> <script src="https://gist.github.com/tcarpentier247/a4b3bd6d11fc0b61d0c53452e2bca2e5.js"></script> </p>
+		</div></body></html>
