--- a/hello.html
+++ b/hello.html
@@ -25,8 +25,8 @@
 
 		<!-- récompenses --> 
 		<div>
-			<h1> Mes récompenses  </h1>
-			<p> En construction...  </p>
+			<h1> Mes récompensesi </h1>
+			<p> <img src="/images/medal_bronze.png"> </p>
 		</div>
 
 		<!-- mon gist --> 
