--- a/hello.html
+++ b/hello.html
@@ -25,7 +25,7 @@
 
 		<!-- récompenses --> 
 		<div>
-			<h1> Mes récompensesi </h1>
+			<h1> Mes récompenses </h1>
 			<p> <img src="/images/medal_bronze.png"> </p>
 		</div>
 
